youtube-upload (0.7.1+svn) stable; urgency=low

  * Change --email option help message.
  * Allow escaped chars in description

 --  <tokland@gmail.com>  Wed, 31 May 2012 18:58:44 +0200

youtube-upload (0.7.1) stable; urgency=low

  * Format checks on video URL and playlists.
  * Add option --unlisted (issue60).
  * Fix progressbar on finish.

 --  <tokland@gmail.com>  Wed, 1 May 2012 18:58:44 +0200

youtube-upload (0.7) stable; urgency=low

  * Prompt password when not specified in command line.
  * Meaningful error codes. 
  * Update to progressbar v2.3.

 --  <tokland@gmail.com>  Thu, 11 Aug 2011 09:54:47 +0200

youtube-upload (0.6.2) unstable; urgency=low

  * Add option to create playlist
  * Add pycurl + progression bar

 --  <tokland@gmail.com>  Sat, 23 Apr 2011 20:06:34 +0200

youtube-upload (0.6.1) unstable; urgency=low

  * fix issue with required options

 --  <tokland@gmail.com>  Fri, 25 Mar 2011 21:01:29 +0100

youtube-upload (0.6) unstable; urgency=low

  * Remove ffmpeg spliting from Python script (orthogonal task)
  * Move all arguments to options except video paths.
  * Bash script to split videos: split_video_for_youtube.sh

 --  <tokland@gmail.com>  Thu, 10 Mar 2011 18:50:45 +0100

youtube-upload (0.5) unstable; urgency=low

  * Update to new Youtube limits (15mins, 2Gb) 
  * Add curl options to bash script
  * Fix encoding for debug (issue10)
  * Fix location bug (issue11)
  * Fix keywords splitting (issue13)
  * Add --wait-processed option (issue19)

 --  <tokland@gmail.com>  Wed, 29 Sep 2010 11:31:18 +0200

youtube-upload (0.4) unstable; urgency=low

  * issue7: fix for gdata 2.0.10
  * issue9: password can be passed through <stdin>
  * Add --location option
  * Add --private option
  * Add --playlist-uri option
  * Add Bash example: Upload a video using curl

 --  <tokland@gmail.com>  Tue, 29 Jun 2010 19:45:40 +0200

youtube-upload (0.3) unstable; urgency=low

  * Keep quality of original video on slipt.
